objects/Challenge_Prize__c.object
<CustomObject>
    <description>The prizes associated to each challenge.</description>
    <fields>
        <fullName>Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipLabel>Prizes</relationshipLabel>
        <relationshipName>Challenge_Prizes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <inlineHelpText>The place for the prize (e.g., 1 for first, 2 for second)</inlineHelpText>
        <label>Place</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>The number of points awarded.</description>
        <label>Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prize__c</fullName>
        <description>The display name for the prize.</description>
        <label>Prize</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_Id__c</fullName>
        <externalId>true</externalId>
        <label>SQL Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The amount in dollars of the prize.</description>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Challenge Prize</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Prizes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>